# Generic

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
GameEngine/: CMakeLists.txt
GameEngine/include/GameEngine/System/: Core.h  Input.h  Renderer.h
GameEngine/include/GameEngine/enum/: KeyEnum.h
GameEngine/include/GameEngine/service/: EntityManager.h
GameEngine/include/GameEngine/util/: Logger.h  RTTI.h  Singleton.h  Tree.h  Util.h  Window.h
GameEngine/src/System/: Core.cpp  Input.cpp  Renderer.cpp
GameEngine/src/service/: EntityManager.cpp
GameEngine/src/util/: GameEngine.cpp  Logger.cpp  RTTI.cpp  Tree.h  Util.cpp  Window.cpp
TestProject/: CMakeLists.txt  main.cpp
demo/: main.cpp
include/Generic/ECS/: Archetype.h  Archetype.hpp  ArchetypeManager.h  ArchetypeManager.hpp  ComponentManager.h  EntityManager.h  PoolAllocator.h  System.h
include/Generic/Util/: NameAllocator.h  RTTI.h  Util.h  VLUI64.h
src/ECS/: Archetype.cpp  ArchetypeManager.cpp  ComponentManager.cpp  EntityManager.cpp
src/Util/: NameAllocator.cpp  RTTI.cpp  Util.cpp
